test/scc/lex/errors/config.py
cmds = ['%test', '-dump-tokens', '-log', '%output']